// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/watermark/demo/basic.tsx extend context correctly 1`] = `
<div
  class=""
  style="position: relative; overflow: hidden;"
>
  <div
    style="height: 500px;"
  />
  <div
    style="z-index: 9; position: absolute; left: 0; top: 0; width: 100%; height: 100%; pointer-events: none; background-repeat: repeat; background-position: 0px 0px; background-image: url('data:image/png;base64,00'); background-size: 218px; visibility: visible !important;"
  />
</div>
`;

exports[`renders components/watermark/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/watermark/demo/custom.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-gap-medium"
>
  <div
    class=""
    style="position: relative; overflow: hidden;"
  >
    <article
      class="g-typography css-var-test-id"
    >
      <div
        class="g-typography css-var-test-id"
      >
        The light-speed iteration of the digital world makes products more complex. However, human consciousness and attention resources are limited. Facing this design contradiction, the pursuit of natural interaction will be the consistent direction of Ant Design.
      </div>
      <div
        class="g-typography css-var-test-id"
      >
        Natural user cognition: According to cognitive psychology, about 80% of external information is obtained through visual channels. The most important visual elements in the interface design, including layout, colors, illustrations, icons, etc., should fully absorb the laws of nature, thereby reducing the user's cognitive cost and bringing authentic and smooth feelings. In some scenarios, opportunely adding other sensory channels such as hearing, touch can create a richer and more natural product experience.
      </div>
      <div
        class="g-typography css-var-test-id"
      >
        Natural user behavior: In the interaction with the system, the designer should fully understand the relationship between users, system roles, and task objectives, and also contextually organize system functions and services. At the same time, a series of methods such as behavior analysis, artificial intelligence and sensors could be applied to assist users to make effective decisions and reduce extra operations of users, to save users' mental and physical resources and make human-computer interaction more natural.
      </div>
    </article>
    <img
      alt="img"
      draggable="false"
      src="https://gw.alipayobjects.com/mdn/rms_08e378/afts/img/A*zx7LTI_ECSAAAAAAAAAAAABkARQnAQ"
      style="z-index: 10; width: 100%; max-width: 800px; position: relative;"
    />
    <div
      style="z-index: 11; position: absolute; left: 0; top: 0; width: 100%; height: 100%; pointer-events: none; background-repeat: repeat; background-position: 0px 0px; background-image: url('data:image/png;base64,00'); background-size: 218px; visibility: visible !important;"
    />
  </div>
  <form
    class="g-form g-form-vertical css-var-test-id g-form-css-var"
    style="width: 280px; flex-shrink: 0; border-inline-start: 1px solid #eee; padding-inline-start: 16px;"
  >
    <div
      class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
    >
      <div
        class="g-row g-form-item-row css-var-test-id"
      >
        <div
          class="g-col g-form-item-label css-var-test-id"
        >
          <label
            class=""
            for="content"
            title="Content"
          >
            Content
          </label>
        </div>
        <div
          class="g-col g-form-item-control css-var-test-id"
        >
          <div
            class="g-form-item-control-input"
          >
            <div
              class="g-form-item-control-input-content"
            >
              <input
                class="g-input g-input-outlined css-var-test-id g-input-css-var"
                id="content"
                placeholder="请输入"
                type="text"
                value="Ant Design"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
    >
      <div
        class="g-row g-form-item-row css-var-test-id"
      >
        <div
          class="g-col g-form-item-label css-var-test-id"
        >
          <label
            class=""
            for="color"
            title="Color"
          >
            Color
          </label>
        </div>
        <div
          class="g-col g-form-item-control css-var-test-id"
        >
          <div
            class="g-form-item-control-input"
          >
            <div
              class="g-form-item-control-input-content"
            >
              <div
                aria-describedby="test-id"
                class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
                id="color"
              >
                <div
                  class="g-color-picker-color-block"
                >
                  <div
                    class="g-color-picker-color-block-inner"
                    style="background: rgba(0, 0, 0, 0.15);"
                  />
                </div>
              </div>
              <div
                class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-color-picker css-var-test-id g-color-picker-css-var g-popover-placement-bottomLeft"
                style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
              >
                <div
                  class="g-popover-arrow"
                  style="position: absolute;"
                >
                  <span
                    class="g-popover-arrow-content"
                  />
                </div>
                <div
                  class="g-popover-container"
                  id="test-id"
                  role="tooltip"
                >
                  <div
                    class="g-popover-content"
                  >
                    <div
                      class="g-color-picker-inner"
                    >
                      <div
                        class="g-color-picker-inner-content"
                      >
                        <div
                          class="g-color-picker-panel"
                        >
                          <div
                            class="g-color-picker-select"
                          >
                            <div
                              class="g-color-picker-palette"
                              style="position: relative;"
                            >
                              <div
                                style="position: absolute; left: 0%; top: 100%; z-index: 1; transform: translate(-50%, -50%);"
                              >
                                <div
                                  class="g-color-picker-handler"
                                  style="background-color: rgba(0, 0, 0, 0.15);"
                                />
                              </div>
                              <div
                                class="g-color-picker-saturation"
                                style="background-color: rgb(255, 0, 0); background-image: linear-gradient(0deg, #000, transparent), linear-gradient(90deg, #fff, hsla(0, 0%, 100%, 0));"
                              />
                            </div>
                          </div>
                          <div
                            class="g-color-picker-slider-container"
                          >
                            <div
                              class="g-color-picker-slider-group"
                            >
                              <div
                                class="g-slider g-color-picker-slider css-var-test-id g-slider-horizontal"
                              >
                                <div
                                  class="g-slider-rail g-color-picker-slider-rail"
                                  style="background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
                                />
                                <div
                                  class="g-slider-step"
                                />
                                <div
                                  aria-disabled="false"
                                  aria-orientation="horizontal"
                                  aria-valuemax="359"
                                  aria-valuemin="0"
                                  aria-valuenow="0"
                                  class="g-slider-handle g-slider-handle-1 g-color-picker-slider-handle"
                                  role="slider"
                                  style="left: 0%; transform: translateX(-50%); background: rgb(255, 0, 0);"
                                  tabindex="0"
                                />
                              </div>
                              <div
                                class="g-slider g-color-picker-slider css-var-test-id g-slider-horizontal"
                              >
                                <div
                                  class="g-slider-rail g-color-picker-slider-rail"
                                  style="background: linear-gradient(90deg, rgba(255, 0, 4, 0) 0%, rgb(0,0,0) 100%);"
                                />
                                <div
                                  class="g-slider-step"
                                />
                                <div
                                  aria-disabled="false"
                                  aria-orientation="horizontal"
                                  aria-valuemax="100"
                                  aria-valuemin="0"
                                  aria-valuenow="15"
                                  class="g-slider-handle g-slider-handle-1 g-color-picker-slider-handle"
                                  role="slider"
                                  style="left: 15%; transform: translateX(-50%); background: rgba(0, 0, 0, 0.15);"
                                  tabindex="0"
                                />
                              </div>
                            </div>
                            <div
                              class="g-color-picker-color-block"
                            >
                              <div
                                class="g-color-picker-color-block-inner"
                                style="background: rgba(0, 0, 0, 0.15);"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="g-color-picker-input-container"
                        >
                          <div
                            class="g-select g-select-sm g-select-borderless g-color-picker-format-select css-var-test-id g-select-css-var g-select-single g-select-show-arrow"
                          >
                            <div
                              class="g-select-content g-select-content-has-value"
                              title="HEX"
                            >
                              HEX
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                autocomplete="off"
                                class="g-select-input"
                                id="test-id"
                                readonly=""
                                role="combobox"
                                type="search"
                                value=""
                              />
                            </div>
                            <div
                              class="g-select-suffix"
                            >
                              <span
                                aria-label="down"
                                class="gicon gicon-down"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                          <div
                            class="g-select-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-test-id g-select-css-var g-select-dropdown-placement-bottomRight"
                            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1150; width: 68px;"
                          >
                            <div>
                              <div
                                id="test-id_list"
                                role="listbox"
                                style="height: 0px; width: 0px; overflow: hidden;"
                              >
                                <div
                                  aria-label="HEX"
                                  aria-selected="true"
                                  id="test-id_list_0"
                                  role="option"
                                >
                                  hex
                                </div>
                                <div
                                  aria-label="HSB"
                                  aria-selected="false"
                                  id="test-id_list_1"
                                  role="option"
                                >
                                  hsb
                                </div>
                              </div>
                              <div
                                class="rc-virtual-list"
                                style="position: relative;"
                              >
                                <div
                                  class="rc-virtual-list-holder"
                                  style="max-height: 256px; overflow-y: auto; overflow-anchor: none;"
                                >
                                  <div>
                                    <div
                                      class="rc-virtual-list-holder-inner"
                                      style="display: flex; flex-direction: column;"
                                    >
                                      <div
                                        aria-disabled="false"
                                        class="g-select-item g-select-item-option g-select-item-option-active g-select-item-option-selected"
                                        title="HEX"
                                      >
                                        <div
                                          class="g-select-item-option-content"
                                        >
                                          HEX
                                        </div>
                                        <span
                                          aria-hidden="true"
                                          class="g-select-item-option-state"
                                          style="user-select: none;"
                                          unselectable="on"
                                        />
                                      </div>
                                      <div
                                        aria-disabled="false"
                                        class="g-select-item g-select-item-option"
                                        title="HSB"
                                      >
                                        <div
                                          class="g-select-item-option-content"
                                        >
                                          HSB
                                        </div>
                                        <span
                                          aria-hidden="true"
                                          class="g-select-item-option-state"
                                          style="user-select: none;"
                                          unselectable="on"
                                        />
                                      </div>
                                      <div
                                        aria-disabled="false"
                                        class="g-select-item g-select-item-option"
                                        title="RGB"
                                      >
                                        <div
                                          class="g-select-item-option-content"
                                        >
                                          RGB
                                        </div>
                                        <span
                                          aria-hidden="true"
                                          class="g-select-item-option-state"
                                          style="user-select: none;"
                                          unselectable="on"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="g-color-picker-input"
                          >
                            <span
                              class="g-input-affix-wrapper g-input-affix-wrapper-sm g-input-outlined g-color-picker-hex-input css-var-test-id g-input-css-var"
                            >
                              <span
                                class="g-input-prefix"
                              >
                                #
                              </span>
                              <input
                                class="g-input g-input-sm"
                                type="text"
                                value="000000"
                              />
                            </span>
                          </div>
                          <div
                            class="g-input-number g-input-number-mode-input css-var-test-id g-input-number-css-var g-color-picker-steppers g-color-picker-alpha-input g-input-number-outlined g-input-number-sm"
                          >
                            <input
                              aria-valuemax="100"
                              aria-valuemin="0"
                              aria-valuenow="15"
                              autocomplete="off"
                              class="g-input-number-input"
                              role="spinbutton"
                              step="1"
                              value="15%"
                            />
                            <div
                              class="g-input-number-actions"
                            >
                              <span
                                aria-disabled="false"
                                aria-label="Increase Value"
                                class="g-input-number-action g-input-number-action-up"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="up"
                                  class="gicon gicon-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                aria-disabled="false"
                                aria-label="Decrease Value"
                                class="g-input-number-action g-input-number-action-down"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="down"
                                  class="gicon gicon-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
    >
      <div
        class="g-row g-form-item-row css-var-test-id"
      >
        <div
          class="g-col g-form-item-label css-var-test-id"
        >
          <label
            class=""
            for="fontSize"
            title="FontSize"
          >
            FontSize
          </label>
        </div>
        <div
          class="g-col g-form-item-control css-var-test-id"
        >
          <div
            class="g-form-item-control-input"
          >
            <div
              class="g-form-item-control-input-content"
            >
              <div
                class="g-slider css-var-test-id g-slider-horizontal"
                id="fontSize"
              >
                <div
                  class="g-slider-rail"
                />
                <div
                  class="g-slider-track"
                  style="left: 0%; width: 15.151515151515152%;"
                />
                <div
                  class="g-slider-step"
                />
                <div
                  aria-describedby="test-id"
                  aria-disabled="false"
                  aria-orientation="horizontal"
                  aria-valuemax="100"
                  aria-valuemin="1"
                  aria-valuenow="16"
                  class="g-slider-handle"
                  role="slider"
                  style="left: 15.151515151515152%; transform: translateX(-50%);"
                  tabindex="0"
                />
                <div
                  class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-slider-tooltip g-tooltip-placement-top"
                  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
                >
                  <div
                    class="g-tooltip-arrow"
                    style="position: absolute; bottom: 0px; left: 0px;"
                  >
                    <span
                      class="g-tooltip-arrow-content"
                    />
                  </div>
                  <div
                    class="g-tooltip-container"
                    id="test-id"
                    role="tooltip"
                  >
                    16
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
    >
      <div
        class="g-row g-form-item-row css-var-test-id"
      >
        <div
          class="g-col g-form-item-label css-var-test-id"
        >
          <label
            class=""
            for="zIndex"
            title="zIndex"
          >
            zIndex
          </label>
        </div>
        <div
          class="g-col g-form-item-control css-var-test-id"
        >
          <div
            class="g-form-item-control-input"
          >
            <div
              class="g-form-item-control-input-content"
            >
              <div
                class="g-slider css-var-test-id g-slider-horizontal"
                id="zIndex"
              >
                <div
                  class="g-slider-rail"
                />
                <div
                  class="g-slider-track"
                  style="left: 0%; width: 11%;"
                />
                <div
                  class="g-slider-step"
                />
                <div
                  aria-describedby="test-id"
                  aria-disabled="false"
                  aria-orientation="horizontal"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="11"
                  class="g-slider-handle"
                  role="slider"
                  style="left: 11%; transform: translateX(-50%);"
                  tabindex="0"
                />
                <div
                  class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-slider-tooltip g-tooltip-placement-top"
                  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
                >
                  <div
                    class="g-tooltip-arrow"
                    style="position: absolute; bottom: 0px; left: 0px;"
                  >
                    <span
                      class="g-tooltip-arrow-content"
                    />
                  </div>
                  <div
                    class="g-tooltip-container"
                    id="test-id"
                    role="tooltip"
                  >
                    11
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
    >
      <div
        class="g-row g-form-item-row css-var-test-id"
      >
        <div
          class="g-col g-form-item-label css-var-test-id"
        >
          <label
            class=""
            for="rotate"
            title="Rotate"
          >
            Rotate
          </label>
        </div>
        <div
          class="g-col g-form-item-control css-var-test-id"
        >
          <div
            class="g-form-item-control-input"
          >
            <div
              class="g-form-item-control-input-content"
            >
              <div
                class="g-slider css-var-test-id g-slider-horizontal"
                id="rotate"
              >
                <div
                  class="g-slider-rail"
                />
                <div
                  class="g-slider-track"
                  style="left: 0%; width: 43.888888888888886%;"
                />
                <div
                  class="g-slider-step"
                />
                <div
                  aria-describedby="test-id"
                  aria-disabled="false"
                  aria-orientation="horizontal"
                  aria-valuemax="180"
                  aria-valuemin="-180"
                  aria-valuenow="-22"
                  class="g-slider-handle"
                  role="slider"
                  style="left: 43.888888888888886%; transform: translateX(-50%);"
                  tabindex="0"
                />
                <div
                  class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-slider-tooltip g-tooltip-placement-top"
                  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
                >
                  <div
                    class="g-tooltip-arrow"
                    style="position: absolute; bottom: 0px; left: 0px;"
                  >
                    <span
                      class="g-tooltip-arrow-content"
                    />
                  </div>
                  <div
                    class="g-tooltip-container"
                    id="test-id"
                    role="tooltip"
                  >
                    -22
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
      style="margin-bottom: 0px;"
    >
      <div
        class="g-row g-form-item-row css-var-test-id"
      >
        <div
          class="g-col g-form-item-label css-var-test-id"
        >
          <label
            class=""
            title="Gap"
          >
            Gap
          </label>
        </div>
        <div
          class="g-col g-form-item-control css-var-test-id"
        >
          <div
            class="g-form-item-control-input"
          >
            <div
              class="g-form-item-control-input-content"
            >
              <div
                class="g-flex css-var-test-id g-flex-gap-small"
              >
                <div
                  class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
                >
                  <div
                    class="g-row g-form-item-row css-var-test-id"
                  >
                    <div
                      class="g-col g-form-item-control css-var-test-id"
                    >
                      <div
                        class="g-form-item-control-input"
                      >
                        <div
                          class="g-form-item-control-input-content"
                        >
                          <div
                            class="g-input-number g-input-number-mode-input css-var-test-id g-input-number-css-var g-input-number-outlined g-input-number-in-form-item"
                            style="width: 100%;"
                          >
                            <input
                              aria-valuenow="100"
                              autocomplete="off"
                              class="g-input-number-input"
                              id="gap_0"
                              placeholder="gapX"
                              role="spinbutton"
                              step="1"
                              value="100"
                            />
                            <div
                              class="g-input-number-actions"
                            >
                              <span
                                aria-disabled="false"
                                aria-label="Increase Value"
                                class="g-input-number-action g-input-number-action-up"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="up"
                                  class="gicon gicon-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                aria-disabled="false"
                                aria-label="Decrease Value"
                                class="g-input-number-action g-input-number-action-down"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="down"
                                  class="gicon gicon-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
                >
                  <div
                    class="g-row g-form-item-row css-var-test-id"
                  >
                    <div
                      class="g-col g-form-item-control css-var-test-id"
                    >
                      <div
                        class="g-form-item-control-input"
                      >
                        <div
                          class="g-form-item-control-input-content"
                        >
                          <div
                            class="g-input-number g-input-number-mode-input css-var-test-id g-input-number-css-var g-input-number-outlined g-input-number-in-form-item"
                            style="width: 100%;"
                          >
                            <input
                              aria-valuenow="100"
                              autocomplete="off"
                              class="g-input-number-input"
                              id="gap_1"
                              placeholder="gapY"
                              role="spinbutton"
                              step="1"
                              value="100"
                            />
                            <div
                              class="g-input-number-actions"
                            >
                              <span
                                aria-disabled="false"
                                aria-label="Increase Value"
                                class="g-input-number-action g-input-number-action-up"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="up"
                                  class="gicon gicon-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                aria-disabled="false"
                                aria-label="Decrease Value"
                                class="g-input-number-action g-input-number-action-down"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="down"
                                  class="gicon gicon-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
      style="margin-bottom: 0px;"
    >
      <div
        class="g-row g-form-item-row css-var-test-id"
      >
        <div
          class="g-col g-form-item-label css-var-test-id"
        >
          <label
            class=""
            title="Offset"
          >
            Offset
          </label>
        </div>
        <div
          class="g-col g-form-item-control css-var-test-id"
        >
          <div
            class="g-form-item-control-input"
          >
            <div
              class="g-form-item-control-input-content"
            >
              <div
                class="g-flex css-var-test-id g-flex-gap-small"
              >
                <div
                  class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
                >
                  <div
                    class="g-row g-form-item-row css-var-test-id"
                  >
                    <div
                      class="g-col g-form-item-control css-var-test-id"
                    >
                      <div
                        class="g-form-item-control-input"
                      >
                        <div
                          class="g-form-item-control-input-content"
                        >
                          <div
                            class="g-input-number g-input-number-mode-input css-var-test-id g-input-number-css-var g-input-number-outlined g-input-number-in-form-item"
                            style="width: 100%;"
                          >
                            <input
                              autocomplete="off"
                              class="g-input-number-input"
                              id="offset_0"
                              placeholder="offsetLeft"
                              role="spinbutton"
                              step="1"
                              value=""
                            />
                            <div
                              class="g-input-number-actions"
                            >
                              <span
                                aria-disabled="false"
                                aria-label="Increase Value"
                                class="g-input-number-action g-input-number-action-up"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="up"
                                  class="gicon gicon-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                aria-disabled="false"
                                aria-label="Decrease Value"
                                class="g-input-number-action g-input-number-action-down"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="down"
                                  class="gicon gicon-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="g-form-item css-var-test-id g-form-css-var g-form-item-vertical"
                >
                  <div
                    class="g-row g-form-item-row css-var-test-id"
                  >
                    <div
                      class="g-col g-form-item-control css-var-test-id"
                    >
                      <div
                        class="g-form-item-control-input"
                      >
                        <div
                          class="g-form-item-control-input-content"
                        >
                          <div
                            class="g-input-number g-input-number-mode-input css-var-test-id g-input-number-css-var g-input-number-outlined g-input-number-in-form-item"
                            style="width: 100%;"
                          >
                            <input
                              autocomplete="off"
                              class="g-input-number-input"
                              id="offset_1"
                              placeholder="offsetTop"
                              role="spinbutton"
                              step="1"
                              value=""
                            />
                            <div
                              class="g-input-number-actions"
                            >
                              <span
                                aria-disabled="false"
                                aria-label="Increase Value"
                                class="g-input-number-action g-input-number-action-up"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="up"
                                  class="gicon gicon-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span
                                aria-disabled="false"
                                aria-label="Decrease Value"
                                class="g-input-number-action g-input-number-action-down"
                                role="button"
                                unselectable="on"
                              >
                                <span
                                  aria-label="down"
                                  class="gicon gicon-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders components/watermark/demo/custom.tsx extend context correctly 2`] = `[]`;

exports[`renders components/watermark/demo/image.tsx extend context correctly 1`] = `
<div
  class=""
  style="position: relative; overflow: hidden;"
>
  <div
    style="height: 500px;"
  />
</div>
`;

exports[`renders components/watermark/demo/image.tsx extend context correctly 2`] = `[]`;

exports[`renders components/watermark/demo/multi-line.tsx extend context correctly 1`] = `
<div
  class=""
  style="position: relative; overflow: hidden;"
>
  <div
    style="height: 500px;"
  />
  <div
    style="z-index: 9; position: absolute; left: 0; top: 0; width: 100%; height: 100%; pointer-events: none; background-repeat: repeat; background-position: 0px 0px; background-image: url('data:image/png;base64,00'); background-size: 226px; visibility: visible !important;"
  />
</div>
`;

exports[`renders components/watermark/demo/multi-line.tsx extend context correctly 2`] = `[]`;

exports[`renders components/watermark/demo/portal.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-flex css-var-test-id g-flex-gap-medium"
  >
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Show in Modal
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Show in Drawer
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Not Show in Drawer
      </span>
    </button>
  </div>,
  <div
    class=""
    style="position: relative; overflow: hidden;"
  >
    <div
      style="z-index: 9; position: absolute; left: 0; top: 0; width: 100%; height: 100%; pointer-events: none; background-repeat: repeat; background-position: 0px 0px; background-image: url('data:image/png;base64,00'); background-size: 218px; visibility: visible !important;"
    />
  </div>,
  <div
    class=""
    style="position: relative; overflow: hidden;"
  >
    <div
      style="z-index: 9; position: absolute; left: 0; top: 0; width: 100%; height: 100%; pointer-events: none; background-repeat: repeat; background-position: 0px 0px; background-image: url('data:image/png;base64,00'); background-size: 218px; visibility: visible !important;"
    />
  </div>,
]
`;

exports[`renders components/watermark/demo/portal.tsx extend context correctly 2`] = `[]`;
